--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "wrangler dev"
+    "dev": "wrangler dev --remote"
   },
   "dependencies": {
     "hono": "^4.5.7"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20241112.0",
     "wrangler": "^3.88.0"
   }
 }
