--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "type": "module",
   "scripts": {
     "dev": "wrangler dev --remote",
-    "test": "vitest run"
+    "test": "vitest run",
+    "lint": "biome lint .",
+    "format": "biome format --write .",
+    "check": "biome check ."
   },
   "dependencies": {
     "hono": "^4.11.1"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.3.9",
     "@cloudflare/workers-types": "^4.20241112.0",
     "vitest": "^3.2.4",
     "wrangler": "^4.54.0"
