--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@biomejs/biome": "^2.3.9",
     "@cloudflare/workers-types": "^4.20241112.0",
+    "chart.js": "^4.4.3",
     "vitest": "^3.2.4",
     "wrangler": "^4.54.0"
   }
